--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button id="start-game-btn" class="main-btn" disabled>Charger le ZIP d'abord</button>
 
             <p class="credits">
-                Site web entièrement conçu de A à Z avec l'aide de <strong>Gemini</strong>.
+                Site web entièrement conçu de A à Z avec l'aide de <strong>Gemini</strong>. Reviewsboxd@duck.com
             </p>
         </div>
 
@@ -74,7 +74,7 @@
             <p id="feedback"></p>
             <button id="next-btn" class="hidden">Continuer</button>
             <p class="credits">
-                Site web entièrement conçu de A à Z avec l'aide de <strong>Gemini</strong>.
+                Site web entièrement conçu de A à Z avec l'aide de <strong>Gemini</strong>. Reviewsboxd@duck.com
             </p>
         </div>
     </div>
